<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NYS Canal Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Buttons -->
    <string name="button_call">Call</string>
    <string name="button_cancel">Cancel</string>
    
    <!-- Text Views -->
    <string name="tv_filters">Filters</string>
    <string name="tv_maptype">Map Type</string>
    <string name="tv_datavalid">Data Update Frequency</string>
    <string name="tv_loading">Loading..</string>
    <string name="tv_loadingdatabase">Loading from online database..</string>
    <string name="tv_loadingphone">Loading from phone..</string>
    <string name="tv_links">Helpful Links</string>
    <string name="tv_tide"><u>US Harbors Tide Charts</u></string>
    
    <!-- NavInfo Text Views -->
    <string name="tv_greenbuoy">Green Buoys</string>
    <string name="tv_redbuoy">Red Buoys</string>
    <string name="tv_greenbeacon">Green Beacons/Lights/Lighthouses</string>
    <string name="tv_redbeacon">Red Beacons/Lights/Lighthouses</string>
    <string name="tv_otherbeacon">Other Beacons/Lights/Lighthouses</string>
    <string name="tv_bridge">Bridges</string>
    
    <!-- Switches -->
    <string name="switch_lock">Locks</string>
    <string name="switch_launch">Boat Ramps &amp; Kayak Launches</string>
    <string name="switch_marina">Marinas &amp; Public Docks</string>
    <string name="switch_bridge">Lift Bridges &amp; Guard Gates</string>
    <string name="switch_boatsforhire">Rentals &amp; Cruises</string>
    <string name="switch_buoys">Navigation</string>
    
    <!-- Image View's content descriptions -->
    <string name="iv_markercolordesc">This ImageView displays the color associated with the marker</string>

    <!-- NavInfo content descriptions -->
    <string name="cd_greenbuoy">Green Buoy</string>
    <string name="cd_redbuoy">Red Buoy</string>
    <string name="cd_greenbeacon">Green Beacon</string>
    <string name="cd_redbeacon">Red Beacon</string>
    <string name="cd_otherbeacon">Lighthouse</string>
    <string name="cd_bridge">Bridge</string>

</resources>
