<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/llNavInfoLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
            <FrameLayout
		        android:id="@+id/flGreenBuoy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:paddingLeft="3dp"
		        android:paddingRight="3dp" >
		
	        <ImageView
	            android:id="@+id/ivGreenBuoy"
	            android:contentDescription="@string/cd_greenbuoy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/mmi_green_buoy"
	            android:layout_gravity="center_vertical" />
	        	  
	    	</FrameLayout>
    
	        <TextView
	            android:id="@+id/tvGreenBuoy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_greenbuoy"
	            android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/flGreenBuoy" />
        
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
            <FrameLayout
		        android:id="@+id/flRedBuoy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:paddingLeft="3dp"
		        android:paddingRight="3dp" >
		
	        <ImageView
	            android:id="@+id/ivRedBuoy"
	            android:contentDescription="@string/cd_redbuoy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/mmi_red_buoy"
	            android:layout_gravity="center_vertical" />
	        	  
	    	</FrameLayout>
    
	        <TextView
	            android:id="@+id/tvRedBuoy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_redbuoy"
	            android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/flRedBuoy" />
        
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
            <FrameLayout
		        android:id="@+id/flGreenBeacon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:paddingLeft="3dp"
		        android:paddingRight="3dp" >
		
	        <ImageView
	            android:id="@+id/ivGreenBeacon"
	            android:contentDescription="@string/cd_greenbeacon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/mmi_green_beacon"
	            android:layout_gravity="center_vertical" />
	        	  
	    	</FrameLayout>
    
	        <TextView
	            android:id="@+id/tvGreenBeacon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_greenbeacon"
	            android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/flGreenBeacon" />
        
        </RelativeLayout>
        
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
            <FrameLayout
		        android:id="@+id/flRedBeacon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:paddingLeft="3dp"
		        android:paddingRight="3dp" >
		
	        <ImageView
	            android:id="@+id/ivRedBeacon"
	            android:contentDescription="@string/cd_redbeacon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/mmi_red_beacon"
	            android:layout_gravity="center_vertical" />
	        	  
	    	</FrameLayout>
    
	        <TextView
	            android:id="@+id/tvRedBeacon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_redbeacon"
	            android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/flRedBeacon" />
        
        </RelativeLayout>
        
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
            <FrameLayout
		        android:id="@+id/flBridge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:paddingLeft="3dp"
		        android:paddingRight="3dp" >
		
	        <ImageView
	            android:id="@+id/ivBridge"
	            android:contentDescription="@string/cd_bridge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/mmi_bridge"
	            android:layout_gravity="center_vertical" />
	        	  
	    	</FrameLayout>
    
	        <TextView
	            android:id="@+id/tvBridge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_bridge"
	            android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/flBridge" />
        
        </RelativeLayout>
    
    </LinearLayout>	
