<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/tv_filters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch_lock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <ImageView
            android:contentDescription="@string/iv_markercolordesc"
            android:id="@+id/ivColor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/red"
            android:src="@drawable/abc_ab_share_pack_holo_light" />
    </FrameLayout>

    <Switch
        android:id="@+id/switch_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/frameLayout1"
        android:text="@string/switch_lock"
        android:checked="true" />

	</RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch_marina"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <ImageView
            android:id="@+id/ivColor2"
            android:contentDescription="@string/iv_markercolordesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/blue"
            android:src="@drawable/abc_ab_share_pack_holo_light" />
    </FrameLayout>

    <Switch
        android:id="@+id/switch_marina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/frameLayout2"
        android:text="@string/switch_marina"
        android:checked="true" />

	</RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch_launch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <ImageView
            android:id="@+id/ivColor3"
            android:contentDescription="@string/iv_markercolordesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/green"
            android:src="@drawable/abc_ab_share_pack_holo_light" />
    </FrameLayout>

    <Switch
        android:id="@+id/switch_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/frameLayout3"
        android:text="@string/switch_launch"
        android:checked="true" />

	</RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch_bridge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <ImageView
            android:id="@+id/ivColor4"
            android:contentDescription="@string/iv_markercolordesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/yellow"
            android:src="@drawable/abc_ab_share_pack_holo_light" />
    </FrameLayout>

    <Switch
        android:id="@+id/switch_bridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/frameLayout4"
        android:text="@string/switch_bridge"
        android:checked="true" />

	</RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch_boatsforhire"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <ImageView
            android:id="@+id/ivColor5"
            android:contentDescription="@string/iv_markercolordesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/violet"
            android:src="@drawable/abc_ab_share_pack_holo_light" />
    </FrameLayout>

    <Switch
        android:id="@+id/switch_boatsforhire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/frameLayout5"
        android:text="@string/switch_boatsforhire"
        android:checked="true" />

	</RelativeLayout>

    <!-- End of Filters -->
    
    <TextView
        android:id="@+id/tvMapType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/tv_maptype"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <Spinner
        android:id="@+id/spinnerMapType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvDataValid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/tv_datavalid"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner
        android:id="@+id/spinnerDataValid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
</LinearLayout>
</ScrollView>